@@ -1,1 +1,2 @@
 DIST eudc-1.41-pkg.tar.gz 79771 SHA256 584a993caf3cbc29f1148fa0cc7920d3e9bfa89f2b098499cd9b0822982c98f3 SHA512 4ba860aa6f303cc294a4662feb703effabefa578cea7bd75a3ef53b072943cb664569d872c124a8502f79725593cbe290a75868338a98d4191dc69a846569f5e WHIRLPOOL a7e7cacae30d490a240f7ef56a0d221e1a0c3716265c0c256f8fc57037effbe5fa3a462106c262dc1bc5233ba35ce44a725acebb5b53219eb07a1f07f414d449
+DIST eudc-1.43-pkg.tar.gz 79614 SHA256 78b2e727bb18da275d75de3b7024489602e3767ee223d6bc6076ac096c997e34 SHA512 aa84bcaa322404faa0257303db1c2027c386637db08a4bd562bc46e3fc0a95b433cea4b003fcd35b188fe57cce58e10c4add4c69890927745564cf4b0ef23287 WHIRLPOOL 7242492e9cd2c583a7d2623c6e8e306feb0e174455d6bf3c13deaeb4ce2af5042f502de18448d5d9247dc885ac1985638c558dcc60baff6dc96103a4f915472a
